# c-processor

./: CMakeCache.txt  CMakeLists.txt  MakeFile  README.md  code  execution.c  execution.h  fetch-decode.c  fetch-decode.h  instructions.txt  log.txt  logger.c  main.c  main.h  parser.c  parser.h  processor.c  queue.c  queue.h  temp_pipline.c  test.txt  translate.c  translate.h
c-processor-gui/my-react-app/: README.md  package-lock.json  package.json
c-processor-gui/my-react-app/public/: electron.js  index.html  preload.js
c-processor-gui/my-react-app/src/: App.js
data/: log.txt  memory_log.txt  registers_log.txt  test.txt
include/: execution.h  fetch-decode.h  logger.h  main.h  parser.h  queue.h  temp_pipline.h
src/: execution.c  fetch-decode.c  logger.c  main.c  parser.c  queue.c  temp_pipline.c
